<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/AlbumListFragment">
    <fragment
        android:id="@+id/AlbumListFragment"
        android:name="com.misw.vinilos.ui.albums.AlbumListFragment"
        android:label="Albums"
        tools:layout="@layout/fragment_album_list">
        <action
            android:id="@+id/action_AlbumListFragment_to_AlbumDetailFragment"
            app:destination="@id/AlbumDetailFragment" />
        <action
            android:id="@+id/action_AlbumListFragment_to_CreateAlbumFragment"
            app:destination="@id/CreateAlbumFragment" />
    </fragment>

    <fragment
        android:id="@+id/CreateAlbumFragment"
        android:name="com.misw.vinilos.ui.createalbum.CreateAlbumFragment"
        android:label="@string/create_album_title"
        tools:layout="@layout/fragment_create_album" />

    <fragment
        android:id="@+id/AlbumDetailFragment"
        android:name="com.misw.vinilos.ui.albumdetail.AlbumDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_album_detail">
        <argument
            android:name="albumId"
            app:argType="integer" />
        <action
            android:id="@+id/action_AlbumDetailFragment_to_AddTrackFragment"
            app:destination="@id/AddTrackFragment" />
    </fragment>

    <fragment
        android:id="@+id/AddTrackFragment"
        android:name="com.misw.vinilos.ui.addtrack.AddTrackFragment"
        android:label="@string/add_track_title"
        tools:layout="@layout/fragment_add_track">
        <argument
            android:name="albumId"
            app:argType="integer" />
    </fragment>

    <fragment
        android:id="@+id/PerformerListFragment"
        android:name="com.misw.vinilos.ui.performers.PerformerListFragment"
        android:label="Catálogo de Artistas"
        tools:layout="@layout/fragment_performer_list">
        <action
            android:id="@+id/action_PerformerListFragment_to_PerformerDetailFragment"
            app:destination="@id/PerformerDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/PerformerDetailFragment"
        android:name="com.misw.vinilos.ui.performers.PerformerDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_performer_detail">
        <argument
            android:name="performerId"
            app:argType="integer" />
        <argument
            android:name="isBand"
            app:argType="boolean" />
        <action
            android:id="@+id/action_PerformerDetailFragment_to_AlbumDetailFragment"
            app:destination="@id/AlbumDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/CollectorsFragment"
        android:name="com.misw.vinilos.ui.collectors.CollectorsFragment"
        android:label="Collectors"
        tools:layout="@layout/fragment_collectors">
        <action
            android:id="@+id/action_CollectorsFragment_to_CollectorDetailFragment"
            app:destination="@id/CollectorDetailFragment" />
    </fragment>

    <fragment
        android:id="@+id/CollectorDetailFragment"
        android:name="com.misw.vinilos.ui.collectors.CollectorDetailFragment"
        android:label=""
        tools:layout="@layout/fragment_collector_detail">
        <argument
            android:name="collectorId"
            app:argType="integer" />
        <action
            android:id="@+id/action_CollectorDetailFragment_to_AlbumDetailFragment"
            app:destination="@id/AlbumDetailFragment" />
    </fragment>
</navigation>
