...
                android:background="@drawable/bg_header_overlay"
                app:layout_constraintTop_toTopOf="@id/albumCover"
                app:layout_constraintStart_toStartOf="@id/albumCover"
                app:layout_constraintEnd_toEndOf="@id/albumCover" />

            <TextView
                android:id="@+id/albumName"
                style="@style/TextAppearance.Vinilos.ScreenTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/space_screen"
                android:layout_marginEnd="@dimen/space_screen"
                android:layout_marginBottom="@dimen/space_s"
...
                    android:layout_marginTop="@dimen/space_l"
                    android:text="@string/title_tracks"
                    app:layout_constraintTop_toBottomOf="@id/albumDescription"
                    app:layout_constraintStart_toStartOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/tracksRecyclerView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/space_s"
                    android:nestedScrollingEnabled="false"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    app:layout_constraintTop_toBottomOf="@id/tracksTitleLabel"
...
