<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_role"
        android:title="@string/role_switch_header"
        app:actionLayout="@layout/view_role_chip"
        app:showAsAction="always" />
</menu>
